--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "SoupX"]
+	path = SoupX
+	url = https://github.com/constantamateur/soupx
+	shallow = true
+	registered = true
